# mirea-pis-exam-bot

./: .dockerignore  Dockerfile  main.py  pyproject.toml  questions.json
.github/workflows/: deploy.yml
