[project]
name = "pis-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.29.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100
select = ["ALL"]
extend-ignore = ["TID", "D", "PLR0913"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
runtime-evaluated-decorators = [
    "aiogram.Router.message",
    "aiogram.Router.callback_query",
]
runtime-evaluated-base-classes = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I002"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
